feat: scan endpoint
